--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <title>Notes app</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Notes</h1>
-        <button id="add-button">+ Add</button>
+        <div class="wrapper">
+            <h1>Notes</h1>
+        </div>
     </header>
-    <ul id="notes-list"></ul>
+    <div class="wrapper">
+        <button id="add-button">+ Add</button>
+        <ul id="notes-list"></ul>
+    </div>
     <script src='scripts/main.js'></script>
 </body>
 </html>
